--- a/index.html
+++ b/index.html
@@ -63,13 +63,13 @@
 
       <section class="resume-section p-3 p-lg-5 d-flex d-column" id="about">
         <div class="my-auto">
-          <h1 class="mb-0">Clarence
-            <span class="text-primary">Taylor</span>
+          <h1 class="mb-0">Hiroyuki
+            <span class="text-primary">Kuromiya</span>
           </h1>
-          <div class="subheading mb-5">3542 Berry Street · Cheyenne Wells, CO 80810 · (317) 585-8468 ·
-            <a href="mailto:name@email.com">name@email.com</a>
+          <div class="subheading mb-5">Graduate School of Education, The University of Tokyo.
+            <a href="mailto:name@email.com">kuromiya@p.u-tokyo.ac.jp</a>
           </div>
-          <p class="lead mb-5">I am experienced in leveraging agile frameworks to provide a robust synopsis for high level overviews. Iterative approaches to corporate strategy foster collaborative thinking to further the overall value proposition.</p>
+          <p class="lead mb-5">PhD Student, currently working on Educational Data Science</p>
           <div class="social-icons">
             <a href="#">
               <i class="fab fa-linkedin-in"></i>
