add my contacts

--- a/index.html
+++ b/index.html
@@ -67,20 +67,20 @@
             <span class="text-primary">Kuromiya</span>
           </h1>
           <div class="subheading mb-5">Graduate School of Education, The University of Tokyo.
-            <a href="mailto:name@email.com">kuromiya@p.u-tokyo.ac.jp</a>
+            <!--<a href="mailto:name@email.com">hoge@hoge.com</a>-->
           </div>
           <p class="lead mb-5">PhD Student, currently working on Educational Data Science</p>
           <div class="social-icons">
-            <a href="#">
+            <a href="www.linkedin.com/in/hiroyuki-kuromiya">
               <i class="fab fa-linkedin-in"></i>
             </a>
-            <a href="#">
+            <a href="https://hiroyuki1993.github.io">
               <i class="fab fa-github"></i>
             </a>
-            <a href="#">
+            <a href="https://twitter.com/hkuromiya?lang=ja">
               <i class="fab fa-twitter"></i>
             </a>
-            <a href="#">
+            <a href="https://www.facebook.com/profile.php?id=100011645565703">
               <i class="fab fa-facebook-f"></i>
             </a>
           </div>
