--- a/index.html
+++ b/index.html
@@ -71,10 +71,13 @@
           </div>
           <p class="lead mb-5">PhD Student, currently working on Educational Data Science</p>
           <div class="social-icons">
-            <a href="www.linkedin.com/in/hiroyuki-kuromiya">
+            <a href="https://qiita.com/Hiroyuki1993">
+              <i class="fas fa-blog"></i>
+            </a>
+            <a href="https://www.linkedin.com/in/hiroyuki-kuromiya">
               <i class="fab fa-linkedin-in"></i>
             </a>
-            <a href="https://hiroyuki1993.github.io">
+            <a href="https://github.com/Hiroyuki1993">
               <i class="fab fa-github"></i>
             </a>
             <a href="https://twitter.com/hkuromiya?lang=ja">
