--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
           <p class="lead mb-5">PhD Student, currently working on Educational Data Science</p>
           <div class="social-icons">
             <a href="https://qiita.com/Hiroyuki1993">
-              <i class="fas fa-blog"></i>
+              <i class="fab fa-blogger"></i>
             </a>
             <a href="https://www.linkedin.com/in/hiroyuki-kuromiya">
               <i class="fab fa-linkedin-in"></i>
@@ -152,24 +152,21 @@
 
           <div class="resume-item d-flex flex-column flex-md-row mb-5">
             <div class="resume-content mr-auto">
-              <h3 class="mb-0">University of Colorado Boulder</h3>
-              <div class="subheading mb-3">Bachelor of Science</div>
-              <div>Computer Science - Web Development Track</div>
-              <p>GPA: 3.23</p>
+              <h3 class="mb-0">The University of Tokyo</h3>
+              <div class="subheading mb-3">Master of Education</div>
             </div>
             <div class="resume-date text-md-right">
-              <span class="text-primary">August 2006 - May 2010</span>
+              <span class="text-primary">April 2016 - March 2018</span>
             </div>
           </div>
 
           <div class="resume-item d-flex flex-column flex-md-row">
             <div class="resume-content mr-auto">
-              <h3 class="mb-0">James Buchanan High School</h3>
-              <div class="subheading mb-3">Technology Magnet Program</div>
-              <p>GPA: 3.56</p>
+              <h3 class="mb-0">The University of Tokyo</h3>
+              <div class="subheading mb-3">Bachelor of Education</div>
             </div>
             <div class="resume-date text-md-right">
-              <span class="text-primary">August 2002 - May 2006</span>
+              <span class="text-primary">April 2012 - March 2018</span>
             </div>
           </div>
 
@@ -185,40 +182,25 @@
           <div class="subheading mb-3">Programming Languages &amp; Tools</div>
           <ul class="list-inline dev-icons">
             <li class="list-inline-item">
-              <i class="fab fa-html5"></i>
+              <i class="fab fa-python"></i>
             </li>
             <li class="list-inline-item">
-              <i class="fab fa-css3-alt"></i>
+              <i class="fab fa-r-project"></i>
             </li>
             <li class="list-inline-item">
               <i class="fab fa-js-square"></i>
             </li>
             <li class="list-inline-item">
-              <i class="fab fa-angular"></i>
+              <i class="fab fa-vuejs"></i>
             </li>
             <li class="list-inline-item">
-              <i class="fab fa-react"></i>
+              <i class="fab fa-html5"></i>
             </li>
             <li class="list-inline-item">
-              <i class="fab fa-node-js"></i>
-            </li>
-            <li class="list-inline-item">
-              <i class="fab fa-sass"></i>
-            </li>
-            <li class="list-inline-item">
-              <i class="fab fa-less"></i>
+              <i class="fab fa-git-square"></i>
             </li>
             <li class="list-inline-item">
               <i class="fab fa-wordpress"></i>
-            </li>
-            <li class="list-inline-item">
-              <i class="fab fa-gulp"></i>
-            </li>
-            <li class="list-inline-item">
-              <i class="fab fa-grunt"></i>
-            </li>
-            <li class="list-inline-item">
-              <i class="fab fa-npm"></i>
             </li>
           </ul>
 
@@ -226,16 +208,13 @@
           <ul class="fa-ul mb-0">
             <li>
               <i class="fa-li fa fa-check"></i>
-              Mobile-First, Responsive Design</li>
+              Data Clearning, Visualization and Modeling</li>
             <li>
               <i class="fa-li fa fa-check"></i>
-              Cross Browser Testing &amp; Debugging</li>
+              Natural Language Processing</li>
             <li>
               <i class="fa-li fa fa-check"></i>
-              Cross Functional Teams</li>
-            <li>
-              <i class="fa-li fa fa-check"></i>
-              Agile Development &amp; Scrum</li>
+              Web Develotpment</li>
           </ul>
         </div>
       </section>
