--- a/index.html
+++ b/index.html
@@ -41,6 +41,9 @@
             <a class="nav-link js-scroll-trigger" href="#about">About</a>
           </li>
           <li class="nav-item">
+            <a class="nav-link js-scroll-trigger" href="#interests">Interests</a>
+          </li>
+          <li class="nav-item">
             <a class="nav-link js-scroll-trigger" href="#experience">Experience</a>
           </li>
           <li class="nav-item">
@@ -48,9 +51,6 @@
           </li>
           <li class="nav-item">
             <a class="nav-link js-scroll-trigger" href="#skills">Skills</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link js-scroll-trigger" href="#interests">Interests</a>
           </li>
           <li class="nav-item">
             <a class="nav-link js-scroll-trigger" href="#awards">Awards</a>
@@ -87,6 +87,16 @@
               <i class="fab fa-facebook-f"></i>
             </a>
           </div>
+        </div>
+      </section>
+
+      <hr class="m-0">
+
+      <section class="resume-section p-3 p-lg-5 d-flex flex-column" id="interests">
+        <div class="my-auto">
+          <h2 class="mb-5">Interests</h2>
+          <p>I am currently interested in Learning Analytics and Software Development for Evidence-Based-Education. Web programming and Machine Learning are the primary way to implement them.</p>
+          <p class="mb-0">However, I will continue to think the purpose of education as well. Personally, I think the purpose of learning is to be happy by itself. I would like to contribute completely different way of Educational Technology.</p>
         </div>
       </section>
 
@@ -154,6 +164,7 @@
             <div class="resume-content mr-auto">
               <h3 class="mb-0">The University of Tokyo</h3>
               <div class="subheading mb-3">Master of Education</div>
+              <div>Quantitative evaluation of graduation research using text mining: Towards verification of effectiveness of integrated learning</div>
             </div>
             <div class="resume-date text-md-right">
               <span class="text-primary">April 2016 - March 2018</span>
@@ -164,6 +175,7 @@
             <div class="resume-content mr-auto">
               <h3 class="mb-0">The University of Tokyo</h3>
               <div class="subheading mb-3">Bachelor of Education</div>
+              <div>The role of the primary motor cortex in the visual imagery task</div>
             </div>
             <div class="resume-date text-md-right">
               <span class="text-primary">April 2012 - March 2018</span>
@@ -214,18 +226,7 @@
               Natural Language Processing</li>
             <li>
               <i class="fa-li fa fa-check"></i>
-              Web Develotpment</li>
-          </ul>
-        </div>
-      </section>
-
-      <hr class="m-0">
-
-      <section class="resume-section p-3 p-lg-5 d-flex flex-column" id="interests">
-        <div class="my-auto">
-          <h2 class="mb-5">Interests</h2>
-          <p>Apart from being a web developer, I enjoy most of my time being outdoors. In the winter, I am an avid skier and novice ice climber. During the warmer months here in Colorado, I enjoy mountain biking, free climbing, and kayaking.</p>
-          <p class="mb-0">When forced indoors, I follow a number of sci-fi and fantasy genre movies and television shows, I am an aspiring chef, and I spend a large amount of my free time exploring the latest technology advancements in the front-end web development world.</p>
+              Web Programming</li>
         </div>
       </section>
 
