--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
             <a class="nav-link js-scroll-trigger" href="#skills">Skills</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link js-scroll-trigger" href="#awards">Awards</a>
+            <a class="nav-link js-scroll-trigger" href="#awards">Publication and Awards</a>
           </li>
         </ul>
       </div>
@@ -95,8 +95,8 @@
       <section class="resume-section p-3 p-lg-5 d-flex flex-column" id="interests">
         <div class="my-auto">
           <h2 class="mb-5">Interests</h2>
-          <p>I am currently interested in Learning Analytics and Software Development for Evidence-Based-Education. Web programming and Machine Learning are the primary way to implement them.</p>
-          <p class="mb-0">However, I will continue to think the purpose of education as well. Personally, I think the purpose of learning is to be happy by itself. I would like to contribute completely different way of Educational Technology.</p>
+          <p>I am currently interested in Learning Analytics and Software Development for Evidence-Based-Education. Web programming and Machine Learning are the primary ways to implement them.</p>
+          <p class="mb-0">Plus, I will continue to think the purpose of education as well. Personally, I think the purpose of learning is to be happy by itself. I would like to contribute completely different way of Educational Technology.</p>
         </div>
       </section>
 
@@ -108,45 +108,34 @@
 
           <div class="resume-item d-flex flex-column flex-md-row mb-5">
             <div class="resume-content mr-auto">
-              <h3 class="mb-0">Senior Web Developer</h3>
-              <div class="subheading mb-3">Intelitec Solutions</div>
-              <p>Bring to the table win-win survival strategies to ensure proactive domination. At the end of the day, going forward, a new normal that has evolved from generation X is on the runway heading towards a streamlined cloud solution. User generated content in real-time will have multiple touchpoints for offshoring.</p>
+              <h3 class="mb-0">Research Assistant</h3>
+              <div class="subheading mb-3">The University of Tokyo</div>
+              <p>Effect validation of Research-Based Active Learning. I am working on text mining with student's writing and log analysis of tabletop devices.</p>
             </div>
             <div class="resume-date text-md-right">
-              <span class="text-primary">March 2013 - Present</span>
+              <span class="text-primary">April 2018 - Present</span>
             </div>
           </div>
 
           <div class="resume-item d-flex flex-column flex-md-row mb-5">
             <div class="resume-content mr-auto">
-              <h3 class="mb-0">Web Developer</h3>
-              <div class="subheading mb-3">Intelitec Solutions</div>
-              <p>Capitalize on low hanging fruit to identify a ballpark value added activity to beta test. Override the digital divide with additional clickthroughs from DevOps. Nanotechnology immersion along the information highway will close the loop on focusing solely on the bottom line.</p>
+              <h3 class="mb-0">SEEDS Research Project</h3>
+              <div class="subheading mb-3">The University of Tokyo</div>
+              <p>Data mining from records at a hospital. My work was mainly text mining with comments from parents and doctors.</p>
             </div>
             <div class="resume-date text-md-right">
-              <span class="text-primary">December 2011 - March 2013</span>
-            </div>
-          </div>
-
-          <div class="resume-item d-flex flex-column flex-md-row mb-5">
-            <div class="resume-content mr-auto">
-              <h3 class="mb-0">Junior Web Designer</h3>
-              <div class="subheading mb-3">Shout! Media Productions</div>
-              <p>Podcasting operational change management inside of workflows to establish a framework. Taking seamless key performance indicators offline to maximise the long tail. Keeping your eye on the ball while performing a deep dive on the start-up mentality to derive convergence on cross-platform integration.</p>
-            </div>
-            <div class="resume-date text-md-right">
-              <span class="text-primary">July 2010 - December 2011</span>
+              <span class="text-primary">April 2016 - March 2018</span>
             </div>
           </div>
 
           <div class="resume-item d-flex flex-column flex-md-row">
             <div class="resume-content mr-auto">
-              <h3 class="mb-0">Web Design Intern</h3>
-              <div class="subheading mb-3">Shout! Media Productions</div>
-              <p>Collaboratively administrate empowered markets via plug-and-play networks. Dynamically procrastinate B2C users after installed base benefits. Dramatically visualize customer directed convergence without revolutionary ROI.</p>
+              <h3 class="mb-0">Web Programmer Intern</h3>
+              <div class="subheading mb-3">3PRO WIS-TECH</div>
+              <p>Development of E-learning System and Cloud Application. I used PHP (Laravel) and Javascript (Angular) in the projects.</p>
             </div>
             <div class="resume-date text-md-right">
-              <span class="text-primary">September 2008 - June 2010</span>
+              <span class="text-primary">Janualy 2016 - Janualy 2017</span>
             </div>
           </div>
 
