--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
             <a class="nav-link js-scroll-trigger" href="#skills">Skills</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link js-scroll-trigger" href="#awards">Publication and Awards</a>
+            <a class="nav-link js-scroll-trigger" href="#awards">Publication &amp; Awards</a>
           </li>
         </ul>
       </div>
@@ -153,7 +153,7 @@
             <div class="resume-content mr-auto">
               <h3 class="mb-0">The University of Tokyo</h3>
               <div class="subheading mb-3">Master of Education</div>
-              <div>Quantitative evaluation of graduation research using text mining: Towards verification of effectiveness of integrated learning</div>
+              <div>Master Thesis: Quantitative evaluation of graduation research using text mining: Towards verification of effectiveness of integrated learning</div>
             </div>
             <div class="resume-date text-md-right">
               <span class="text-primary">April 2016 - March 2018</span>
@@ -164,7 +164,7 @@
             <div class="resume-content mr-auto">
               <h3 class="mb-0">The University of Tokyo</h3>
               <div class="subheading mb-3">Bachelor of Education</div>
-              <div>The role of the primary motor cortex in the visual imagery task</div>
+              <div>Bachelor Thesis: The role of the primary motor cortex in the visual imagery task</div>
             </div>
             <div class="resume-date text-md-right">
               <span class="text-primary">April 2012 - March 2018</span>
@@ -223,34 +223,23 @@
 
       <section class="resume-section p-3 p-lg-5 d-flex flex-column" id="awards">
         <div class="my-auto">
-          <h2 class="mb-5">Awards &amp; Certifications</h2>
+          <h2 class="mb-5">Publication &amp; Awards</h2>
           <ul class="fa-ul mb-0">
             <li>
-              <i class="fa-li fa fa-trophy text-warning"></i>
-              Google Analytics Certified Developer</li>
+              <i class="fa-li fa fa-newspaper text-warning"></i>
+              Hiroyuki Kuromiya, Ichiro Hidaka, and Yoshiharu Yamamoto. (2018). Data-Driven Teaching Assessment in Inquiry-Based Learning by Topic Modeliing. International Conference on Computers in Education. (Doctoral Student Consortium). </li>
             <li>
               <i class="fa-li fa fa-trophy text-warning"></i>
-              Mobile Web Specialist - Google Certification</li>
+              Hiroyuki Kuromiya, Ichiro Hidaka, Shinji Okihama, and Yoshiharu Yamamoto. (2018). Leaning Analytics for Graduation Work: Quantitative Description about Graduation Work's Abstract over 31 Years at a Secondary School. The Information Processing Society of Japan. (Short paper, Student Encouragement Award, in Japanese)</li>
             <li>
-              <i class="fa-li fa fa-trophy text-warning"></i>
-              1<sup>st</sup>
-              Place - University of Colorado Boulder - Emerging Tech Competition 2009</li>
+              <i class="fa-li fa fa-newspaper text-warning"></i>
+              Hirotaka Gima, Hiroyuki Kuromiya, Hama Watanabe, Tomohiko Nakamura, and Gentaro Taga. (2018).　Relationship between medical interview sheet assessments at 18 months and 3 years of age and development at 6 years of age in very low birth weight infants. Japanese Society of Physical Therapy. (Full paper, in Japanese)</li>
             <li>
-              <i class="fa-li fa fa-trophy text-warning"></i>
-              1<sup>st</sup>
-              Place - University of Colorado Boulder - Adobe Creative Jam 2008 (UI Design Category)</li>
+              <i class="fa-li fa fa-newspaper text-warning"></i>
+              Hiroyuki Kuromiya, Ichiro Hidaka, and Yoshiharu Yamamoto. (2018). Analysis of Evaluation Factors in Inquiry-Based Learning with Natural Language Processing. The 46th annural meeting of the Behaviormetric Society. (Poster session, in Japanese)</li>
             <li>
-              <i class="fa-li fa fa-trophy text-warning"></i>
-              2<sup>nd</sup>
-              Place - University of Colorado Boulder - Emerging Tech Competition 2008</li>
-            <li>
-              <i class="fa-li fa fa-trophy text-warning"></i>
-              1<sup>st</sup>
-              Place - James Buchanan High School - Hackathon 2006</li>
-            <li>
-              <i class="fa-li fa fa-trophy text-warning"></i>
-              3<sup>rd</sup>
-              Place - James Buchanan High School - Hackathon 2005</li>
+              <i class="fa-li fa fa-newspaper text-warning"></i>
+              Hiroyuki Kuromiya, Ichiro Hidaka, Shinji Okihama, and Yoshiharu Yamamoto. (2018). Secular Changes in Abstracts of Graduation Work: Quantitative Description of Abstracts of Graduation Work over 31 Years at a Secondary School. Center for Advanced School Education and Evidence-based Research. (Working paper, in Japanese). </li>
           </ul>
         </div>
       </section>
