modify the first slide

--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
           <div class="subheading mb-5">Graduate School of Education, The University of Tokyo.
             <!--<a href="mailto:name@email.com">hoge@hoge.com</a>-->
           </div>
-          <p class="lead mb-5">PhD Student, currently working on Educational Data Science</p>
+          <p class="lead mb-5">PhD Student, currently working on Educational Technology</p>
           <div class="social-icons">
             <a href="https://qiita.com/Hiroyuki1993">
               <i class="fab fa-blogger"></i>
@@ -95,8 +95,8 @@
       <section class="resume-section p-3 p-lg-5 d-flex flex-column" id="interests">
         <div class="my-auto">
           <h2 class="mb-5">Interests</h2>
-          <p>I am currently interested in Learning Analytics and Software Development for Evidence-Based-Education. Web programming and Machine Learning are the primary ways to implement them.</p>
-          <p class="mb-0">Plus, I will continue to think the purpose of education as well. Personally, I think the purpose of learning is to be happy by itself. I would like to contribute completely different way of Educational Technology.</p>
+          <p>I am currently interested in Learning Analytics and Software Development for Evidence-Based-Education.</p>
+          <p class="mb-0">I will continue to think the purpose of education. I will contribute to learner's happiness by information technology.</p>
         </div>
       </section>
 
