--- a/index.html
+++ b/index.html
@@ -66,10 +66,10 @@
           <h1 class="mb-0">Hiroyuki
             <span class="text-primary">Kuromiya</span>
           </h1>
-          <div class="subheading mb-5">Graduate School of Education, The University of Tokyo.
+          <div class="subheading mb-5">Graduate School of Informatics, Kyoto University.
             <!--<a href="mailto:name@email.com">hoge@hoge.com</a>-->
           </div>
-          <p class="lead mb-5">PhD Student, currently working on Educational Technology</p>
+          <p class="lead mb-5">PhD Student, Currently Working on Learning and Educational Technology</p>
           <div class="social-icons">
             <a href="https://qiita.com/Hiroyuki1993">
               <i class="fab fa-blogger"></i>
@@ -95,7 +95,7 @@
       <section class="resume-section p-3 p-lg-5 d-flex flex-column" id="interests">
         <div class="my-auto">
           <h2 class="mb-5">Interests</h2>
-          <p>I am currently interested in Learning Analytics and Software Development for Evidence-Based-Education.</p>
+          <p>I am currently interested in Learning Analytics and Software Development for Evidence-Based Practice in Education.</p>
           <p class="mb-0">I will continue to think the purpose of education. I will contribute to learner's happiness by information technology.</p>
         </div>
       </section>
@@ -132,7 +132,7 @@
             <div class="resume-content mr-auto">
               <h3 class="mb-0">Web Programmer Intern</h3>
               <div class="subheading mb-3">3PRO WIS-TECH</div>
-              <p>Development of E-learning System and Cloud Application. I used PHP (Laravel) and Javascript (Angular) in the projects.</p>
+              <p>Development of E-learning System and Cloud Application. I used PHP (Laravel) and Javascript (AngularJS) in the projects.</p>
             </div>
             <div class="resume-date text-md-right">
               <span class="text-primary">Janualy 2016 - Janualy 2017</span>
