--- a/index.html
+++ b/index.html
@@ -110,7 +110,7 @@
             <div class="resume-content mr-auto">
               <h3 class="mb-0">Research Assistant</h3>
               <div class="subheading mb-3">The University of Tokyo</div>
-              <p>Effect validation of Research-Based Active Learning. I am working on text mining with student's writing and log analysis of tabletop devices.</p>
+              <p>Effect validation of Research-Based Active Learning. I was working on text mining with student's writing and log analysis of tabletop devices in the classroom.</p>
             </div>
             <div class="resume-date text-md-right">
               <span class="text-primary">April 2018 - Present</span>
@@ -192,7 +192,7 @@
               <i class="fab fa-js-square"></i>
             </li>
             <li class="list-inline-item">
-              <i class="fab fa-vuejs"></i>
+              <i class="fab fa-php"></i>
             </li>
             <li class="list-inline-item">
               <i class="fab fa-html5"></i>
@@ -200,12 +200,9 @@
             <li class="list-inline-item">
               <i class="fab fa-git-square"></i>
             </li>
-            <li class="list-inline-item">
-              <i class="fab fa-wordpress"></i>
-            </li>
           </ul>
 
-          <div class="subheading mb-3">Workflow</div>
+          <div class="subheading mb-3">What I can do</div>
           <ul class="fa-ul mb-0">
             <li>
               <i class="fa-li fa fa-check"></i>
@@ -227,19 +224,20 @@
           <ul class="fa-ul mb-0">
             <li>
               <i class="fa-li fa fa-newspaper text-warning"></i>
-              Hiroyuki Kuromiya, Ichiro Hidaka, and Yoshiharu Yamamoto. (2018). Data-Driven Teaching Assessment in Inquiry-Based Learning by Topic Modeliing. International Conference on Computers in Education. (Doctoral Student Consortium). </li>
+              Hiroyuki Kuromiya, Ichiro Hidaka, and Yoshiharu Yamamoto. (2018). Data-Driven Teaching Assessment in Inquiry-Based Learning by Topic Modeliing. International Conference on Computers in Education. (Doctoral Student Consortium). <a href="https://www.dropbox.com/s/4qoqhdsw73d6ogs/5%20ICCE%202018%20DSC%20Proceedings.pdf?dl=0">Link</a> 
+            </li>
+            <li>
+              <i class="fa-li fa fa-newspaper text-warning"></i>
+              Hiroyuki Kuromiya, Ichiro Hidaka, and Yoshiharu Yamamoto. (2019). Analysis of Research-Based Active Learning By Topic Model. Japanese Society of Educational Technology. (Full paper, in Japanese). <a href="https://www.jstage.jst.go.jp/article/jjet/42/4/42_42127/_article/-char/ja">Link</a>
+            </li>
             <li>
               <i class="fa-li fa fa-trophy text-warning"></i>
-              Hiroyuki Kuromiya, Ichiro Hidaka, Shinji Okihama, and Yoshiharu Yamamoto. (2018). Leaning Analytics for Graduation Work: Quantitative Description about Graduation Work's Abstract over 31 Years at a Secondary School. The Information Processing Society of Japan. (Short paper, Student Encouragement Award, in Japanese)</li>
+              Hiroyuki Kuromiya, Ichiro Hidaka, Shinji Okihama, and Yoshiharu Yamamoto. (2018). Leaning Analytics for Graduation Work: Quantitative Description about Graduation Work's Abstract over 31 Years at a Secondary School. The Information Processing Society of Japan. (Short paper, Student Encouragement Award, in Japanese) <a href="https://ipsj.ixsq.nii.ac.jp/ej/index.php?active_action=repository_view_main_item_detail&page_id=13&block_id=8&item_id=189628&item_no=1">Link</a>
+            </li>
             <li>
               <i class="fa-li fa fa-newspaper text-warning"></i>
-              Hirotaka Gima, Hiroyuki Kuromiya, Hama Watanabe, Tomohiko Nakamura, and Gentaro Taga. (2018).　Relationship between medical interview sheet assessments at 18 months and 3 years of age and development at 6 years of age in very low birth weight infants. Japanese Society of Physical Therapy. (Full paper, in Japanese)</li>
-            <li>
-              <i class="fa-li fa fa-newspaper text-warning"></i>
-              Hiroyuki Kuromiya, Ichiro Hidaka, and Yoshiharu Yamamoto. (2018). Analysis of Evaluation Factors in Inquiry-Based Learning with Natural Language Processing. The 46th annural meeting of the Behaviormetric Society. (Poster session, in Japanese)</li>
-            <li>
-              <i class="fa-li fa fa-newspaper text-warning"></i>
-              Hiroyuki Kuromiya, Ichiro Hidaka, Shinji Okihama, and Yoshiharu Yamamoto. (2018). Secular Changes in Abstracts of Graduation Work: Quantitative Description of Abstracts of Graduation Work over 31 Years at a Secondary School. Center for Advanced School Education and Evidence-based Research. (Working paper, in Japanese). </li>
+              Hirotaka Gima, Hiroyuki Kuromiya, Hama Watanabe, Tomohiko Nakamura, and Gentaro Taga. (2018).　Relationship between medical interview sheet assessments at 18 months and 3 years of age and development at 6 years of age in very low birth weight infants. Japanese Society of Physical Therapy. (Full paper, in Japanese) <a href="https://www.jstage.jst.go.jp/article/rigaku/advpub/0/advpub_11504/_article/-char/ja/">Link</a>
+            </li>
           </ul>
         </div>
       </section>
