--- a/index.html
+++ b/index.html
@@ -151,6 +151,17 @@
 
           <div class="resume-item d-flex flex-column flex-md-row mb-5">
             <div class="resume-content mr-auto">
+              <h3 class="mb-0">Kyoto University</h3>
+              <div class="subheading mb-3">Graduate School of Informatics</div>
+              <div>Doctoral Student</div>
+            </div>
+            <div class="resume-date text-md-right">
+              <span class="text-primary">April 2019 - Now</span>
+            </div>
+          </div>
+
+          <div class="resume-item d-flex flex-column flex-md-row mb-5">
+            <div class="resume-content mr-auto">
               <h3 class="mb-0">The University of Tokyo</h3>
               <div class="subheading mb-3">Master of Education</div>
               <div>Master Thesis: Quantitative evaluation of graduation research using text mining: Towards verification of effectiveness of integrated learning</div>
