--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <meta name="description" content="">
     <meta name="author" content="">
+    <base target="_blank">
 
     <title>Hiroyuki Kuromiya</title>
 
@@ -113,7 +114,7 @@
               <p>Effect validation of Research-Based Active Learning. I was working on text mining with student's writing and log analysis of tabletop devices in the classroom.</p>
             </div>
             <div class="resume-date text-md-right">
-              <span class="text-primary">April 2018 - Present</span>
+              <span class="text-primary">April 2018 - March 2019</span>
             </div>
           </div>
 
@@ -235,19 +236,23 @@
           <ul class="fa-ul mb-0">
             <li>
               <i class="fa-li fa fa-newspaper text-warning"></i>
-              Hiroyuki Kuromiya, Ichiro Hidaka, and Yoshiharu Yamamoto. (2018). Data-Driven Teaching Assessment in Inquiry-Based Learning by Topic Modeliing. International Conference on Computers in Education. (Doctoral Student Consortium). <a href="https://www.dropbox.com/s/4qoqhdsw73d6ogs/5%20ICCE%202018%20DSC%20Proceedings.pdf?dl=0">Link</a> 
+              <u>Hiroyuki Kuromiya</u>. Exploratory Study for Relationships between Graduation Work and Subsequent Situation: Quantitative Study Using Text Mining. (May 2019). <a href="https://www.schoolexcellence.p.u-tokyo.ac.jp/works/2079/">Link</a> 
             </li>
             <li>
               <i class="fa-li fa fa-newspaper text-warning"></i>
-              Hiroyuki Kuromiya, Ichiro Hidaka, and Yoshiharu Yamamoto. (2019). Analysis of Research-Based Active Learning By Topic Model. Japanese Society of Educational Technology. (Full paper, in Japanese). <a href="https://www.jstage.jst.go.jp/article/jjet/42/4/42_42127/_article/-char/ja">Link</a>
+              Hirotaka Gima, <u>Hiroyuki Kuromiya</u>, Hama Watanabe, Tomohiko Nakamura, and Gentaro Taga. Relationship between medical interview sheet assessments at 18 months and 3 years of age and development at 6 years of age in very low birth weight infants. Japanese Society of Physical Therapy. (April 2019). <a href="https://www.jstage.jst.go.jp/article/rigaku/46/2/46_11504/_article/-char/ja">Link</a>
+            </li>
+            <li>
+              <i class="fa-li fa fa-newspaper text-warning"></i>
+              <u>Hiroyuki Kuromiya</u>, Ichiro Hidaka, and Yoshiharu Yamamoto. Analysis of Research-Based Active Learning By Topic Model. Japanese Society of Educational Technology. (March 2019). <a href="https://www.jstage.jst.go.jp/article/jjet/42/4/42_42127/_article/-char/ja">Link</a>
+            </li>
+            <li>
+              <i class="fa-li fa fa-newspaper text-warning"></i>
+              <u>Hiroyuki Kuromiya</u>, Ichiro Hidaka, and Yoshiharu Yamamoto. Data-Driven Teaching Assessment in Inquiry-Based Learning by Topic Modeliing. International Conference on Computers in Education.  (November 2018).  <a href="https://www.dropbox.com/s/4qoqhdsw73d6ogs/5%20ICCE%202018%20DSC%20Proceedings.pdf?dl=0">Link</a> 
             </li>
             <li>
               <i class="fa-li fa fa-trophy text-warning"></i>
-              Hiroyuki Kuromiya, Ichiro Hidaka, Shinji Okihama, and Yoshiharu Yamamoto. (2018). Leaning Analytics for Graduation Work: Quantitative Description about Graduation Work's Abstract over 31 Years at a Secondary School. The Information Processing Society of Japan. (Short paper, Student Encouragement Award, in Japanese) <a href="https://ipsj.ixsq.nii.ac.jp/ej/index.php?active_action=repository_view_main_item_detail&page_id=13&block_id=8&item_id=189628&item_no=1">Link</a>
-            </li>
-            <li>
-              <i class="fa-li fa fa-newspaper text-warning"></i>
-              Hirotaka Gima, Hiroyuki Kuromiya, Hama Watanabe, Tomohiko Nakamura, and Gentaro Taga. (2018).　Relationship between medical interview sheet assessments at 18 months and 3 years of age and development at 6 years of age in very low birth weight infants. Japanese Society of Physical Therapy. (Full paper, in Japanese) <a href="https://www.jstage.jst.go.jp/article/rigaku/advpub/0/advpub_11504/_article/-char/ja/">Link</a>
+              Student Award, The Information Processing Society of Japan. (June 2018). <a href="https://ipsj.ixsq.nii.ac.jp/ej/index.php?active_action=repository_view_main_item_detail&page_id=13&block_id=8&item_id=189628&item_no=1">Link</a>
             </li>
           </ul>
         </div>
