add google scholar link

--- a/index.html
+++ b/index.html
@@ -87,6 +87,9 @@
             <a href="https://www.facebook.com/profile.php?id=100011645565703">
               <i class="fab fa-facebook-f"></i>
             </a>
+            <a href="https://scholar.google.co.jp/citations?user=8rjXE-QAAAAJ&hl=en&oi=ao">
+              <i class="fab fa-google"></i>
+            </a>
           </div>
         </div>
       </section>
