--- a/index.html
+++ b/index.html
@@ -72,18 +72,18 @@
           </div>
           <p class="lead mb-5">PhD Student, Currently Working on Learning and Educational Technology</p>
           <div class="social-icons">
-            <a href="https://qiita.com/Hiroyuki1993">
+            <!--<a href="https://qiita.com/Hiroyuki1993">
               <i class="fab fa-blogger"></i>
             </a>
             <a href="https://www.linkedin.com/in/hiroyuki-kuromiya">
               <i class="fab fa-linkedin-in"></i>
-            </a>
+            </a>-->
             <a href="https://github.com/Hiroyuki1993">
               <i class="fab fa-github"></i>
             </a>
-            <a href="https://twitter.com/hkuromiya?lang=ja">
+            <!--<a href="https://twitter.com/hkuromiya?lang=ja">
               <i class="fab fa-twitter"></i>
-            </a>
+            </a>-->
             <a href="https://www.facebook.com/profile.php?id=100011645565703">
               <i class="fab fa-facebook-f"></i>
             </a>
@@ -210,7 +210,7 @@
               <i class="fab fa-php"></i>
             </li>
             <li class="list-inline-item">
-              <i class="fab fa-html5"></i>
+              <i class="fab fa-ruby"></i>
             </li>
             <li class="list-inline-item">
               <i class="fab fa-git-square"></i>
@@ -224,10 +224,10 @@
               Data Clearning, Visualization and Modeling</li>
             <li>
               <i class="fa-li fa fa-check"></i>
-              Natural Language Processing</li>
+              Web Application Development</li>
             <li>
               <i class="fa-li fa fa-check"></i>
-              Web Programming</li>
+              Natural Language Processing</li>
         </div>
       </section>
 
@@ -235,27 +235,15 @@
 
       <section class="resume-section p-3 p-lg-5 d-flex flex-column" id="awards">
         <div class="my-auto">
-          <h2 class="mb-5">Publication &amp; Awards</h2>
+          <h2 class="mb-5">Publications</h2>
           <ul class="fa-ul mb-0">
             <li>
               <i class="fa-li fa fa-newspaper text-warning"></i>
-              <u>Hiroyuki Kuromiya</u>. Exploratory Study for Relationships between Graduation Work and Subsequent Situation: Quantitative Study Using Text Mining. (May 2019). <a href="https://www.schoolexcellence.p.u-tokyo.ac.jp/works/2079/">Link</a> 
-            </li>
-            <li>
-              <i class="fa-li fa fa-newspaper text-warning"></i>
-              Hirotaka Gima, <u>Hiroyuki Kuromiya</u>, Hama Watanabe, Tomohiko Nakamura, and Gentaro Taga. Relationship between medical interview sheet assessments at 18 months and 3 years of age and development at 6 years of age in very low birth weight infants. Japanese Society of Physical Therapy. (April 2019). <a href="https://www.jstage.jst.go.jp/article/rigaku/46/2/46_11504/_article/-char/ja">Link</a>
-            </li>
-            <li>
-              <i class="fa-li fa fa-newspaper text-warning"></i>
-              <u>Hiroyuki Kuromiya</u>, Ichiro Hidaka, and Yoshiharu Yamamoto. Analysis of Research-Based Active Learning By Topic Model. Japanese Society of Educational Technology. (March 2019). <a href="https://www.jstage.jst.go.jp/article/jjet/42/4/42_42127/_article/-char/ja">Link</a>
+              <u>Hiroyuki Kuromiya</u>, Rwitajit Majumdar, Jayakrishnan Warriem, and Hiroaki Ogata. Data-driven Validation of Pedagogical Model -A Case of Blended LCM Model. (Dec 2019). <a href="https://www.researchgate.net/publication/338209688_Data-driven_Validation_of_Pedagogical_Model_-A_Case_of_Blended_LCM_Model">Link</a> 
             </li>
             <li>
               <i class="fa-li fa fa-newspaper text-warning"></i>
               <u>Hiroyuki Kuromiya</u>, Ichiro Hidaka, and Yoshiharu Yamamoto. Data-Driven Teaching Assessment in Inquiry-Based Learning by Topic Modeliing. International Conference on Computers in Education.  (November 2018).  <a href="https://www.researchgate.net/publication/332224070_Data-Driven_Teaching_Assessment_in_Inquiry-Based_Learning_by_Topic_Modeling">Link</a> 
-            </li>
-            <li>
-              <i class="fa-li fa fa-trophy text-warning"></i>
-              Student Award, The Information Processing Society of Japan. (June 2018). <a href="https://ipsj.ixsq.nii.ac.jp/ej/index.php?active_action=repository_view_main_item_detail&page_id=13&block_id=8&item_id=189628&item_no=1">Link</a>
             </li>
           </ul>
         </div>
