--- a/index.html
+++ b/index.html
@@ -210,7 +210,7 @@
               <i class="fab fa-php"></i>
             </li>
             <li class="list-inline-item">
-              <i class="fab fa-ruby"></i>
+              <i class="fab fa-gem"></i>
             </li>
             <li class="list-inline-item">
               <i class="fab fa-git-square"></i>
